--- a/blog/templates/main/single_blog.html
+++ b/blog/templates/main/single_blog.html
@@ -46,13 +46,14 @@
                     {{blog.description}}
                 </p>
                 
-                <div class= "flex justify-between">
-                    <form action="{% url 'delete_blog' blog.id %}">
-                        <button class='bg-red-400 p-2 rounded-lg'>Delete Blog</button>
+                <div class="flex justify-between p-4">
+                    <form action="{% url 'delete_blog' blog.id %}" method="POST" onsubmit="return confirmDelete()">
+                        {% csrf_token %}
+                        <button class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-700">Delete Blog</button>
                     </form>
-
+                
                     <form action="{% url 'edit_blog' blog.id %}">
-                        <button class='bg-yellow-400 p-2 rounded-lg'>Edit Blog</button>
+                        <button class="bg-yellow-400 px-4 py-2 rounded-lg hover:bg-yellow-500">Edit Blog</button>
                     </form>
                 </div>
             </div>
@@ -60,6 +61,12 @@
         </div>
     </div>
 </div>
+
+<script>
+    function confirmDelete() {
+        return confirm("Are you sure you want to delete this blog?");
+    }
+</script>
 
   
 <!-- https://play.tailwindcss.com/eCfibrSI2X -->
