--- a/blog/templates/components/_navbar.html
+++ b/blog/templates/components/_navbar.html
@@ -1,52 +1,22 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
-  <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-  >
-    <a
-      href="/blog/"
-      class="flex items-center space-x-3 rtl:space-x-reverse"
-    >
-      <img
-        src="https://plineup-prod.blr1.digitaloceanspaces.com/upload/flag/MAP_1686229757.png"
-        class="h-8"
-        alt="Flowbite Logo"
-      />
-      <span
-        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        >CricBlog</span
-      >
+<nav class="bg-gray-900 p-4 shadow-md">
+  <div class="max-w-screen-xl mx-auto flex items-center justify-between">
+    <!-- Logo aligned on the far left -->
+    <a href="/blog/" class="flex items-center">
+      <img src="https://plineup-prod.blr1.digitaloceanspaces.com/upload/flag/MAP_1686229757.png" class="h-8" alt="CricBlog Logo" />
+      <span class="ml-2 text-2xl font-bold text-white tracking-wider">CricBlog</span>
     </a>
-    
-    <div
-      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
-      id="navbar-cta"
-    >
-      <ul
-        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
-      >
-        <li>
-          <a
-            href="/blog/"
-            class="block py-2 px-3 md:p-0 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:dark:text-blue-500"
-            aria-current="page"
-            >Home</a
-          >
-        </li>
-        <li>
-          <a
-            href="/blog/create/"
-            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-            >Create</a
-          >
-        </li>
-        <li>
-          <a
-            href="/blog/logout/"
-            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-            >Logout</a
-          >
-        </li>
-      </ul>
-    </div>
+
+    <!-- Links aligned on the far right -->
+    <ul class="flex items-center space-x-10">
+      <li>
+        <a href="/blog/" class="text-white hover:text-blue-400 transition-colors duration-200">Home</a>
+      </li>
+      <li>
+        <a href="/blog/create/" class="text-white hover:text-blue-400 transition-colors duration-200">Create</a>
+      </li>
+      <li>
+        <a href="/blog/logout/" class="text-white hover:text-blue-400 transition-colors duration-200">Logout</a>
+      </li>
+    </ul>
   </div>
 </nav>
