--- a/blog/templates/main/single_blog.html
+++ b/blog/templates/main/single_blog.html
@@ -26,17 +26,8 @@
                 <p class="text-gray-700 text-xs mt-2">Written By:
                     <a href="#"
                         class="text-indigo-600 font-medium hover:text-gray-900 transition duration-500 ease-in-out">
-                        Ahmad Sultani
-                    </a> In
-                    <a href="#"
-                        class="text-xs text-indigo-600 font-medium hover:text-gray-900 transition duration-500 ease-in-out">
-                        Election
-                    </a>,
-                    <a href="#"
-                        class="text-xs text-indigo-600 font-medium hover:text-gray-900 transition duration-500 ease-in-out">
-                        Politics
+                        {{blog.author}}
                     </a>
-
                 </p>
 
                 <p class="text-base leading-8 my-5">
